<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.barcodereader.MainActivity">

    <TableRow
        android:id="@+id/bExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttton">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/bbeck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </TableRow>

    <Button
        android:id="@+id/read_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_focus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttton"
        android:text="@string/read_barcode"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bExit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="100dp"
        android:checked="false"
        android:text="@string/auto_focus"
        android:textColor="@color/colorButton"
        android:textStyle="normal|bold"
        app:buttonTint="@color/colorButton" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:checked="false"
        android:text="@string/use_flash"
        android:textColor="@color/colorButton"
        android:textStyle="normal|bold"
        app:buttonTint="@color/colorButton" />

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/read_barcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/input_code"
        android:textColor="@color/colorButton"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/code"
        android:inputType="text" />

    <Button
        android:id="@+id/bVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttton"
        android:text="@string/verify"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
